deployment/k8s/api-config.yaml
---
# Namespace
apiVersion: v1
kind: Namespace
metadata:
  name: cortex
  labels:
    name: cortex
